feat(dashboard): fixing subtitle placement and size

--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -481,7 +481,6 @@
 
     function destroyChart(id){ const ch = state.charts.get(id); if (ch){ ch.destroy(); state.charts.delete(id); } }
 
-  
     function renderBreakdown(id, cell, factors){
       const labels = ["login_frequency","feature_adoption","support_ticket_volume","invoice_timeliness","api_usage_trend"];
       const pretty = {
@@ -491,32 +490,43 @@
         invoice_timeliness:"Invoice Timeliness",
         api_usage_trend:"API Usage Trend"
       };
-      const data = labels.map(k => Math.round(factors[k] ?? 0));                // 0–100 per component
-      const contrib = labels.map(k => Math.round((factors[k] ?? 0) * WEIGHTS[k])); // weighted donut
+      const data = labels.map(k => Math.round(factors[k] ?? 0));
+      const contrib = labels.map(k => Math.round((factors[k] ?? 0) * WEIGHTS[k]));
 
       cell.innerHTML = `
         <div class="expanded-grid">
           <!-- LEFT: donut -->
           <div>
             <div style="font-weight:700;font-size:16px;margin:0 0 8px 2px">
-              How this customer’s score is built <span class="mini" style="font-weight:400"></span>
+              How this customer’s score is built <span class="mini" style="font-weight:400">(weighted contributions)</span>
             </div>
             <div style="max-width:340px">
               <canvas id="donut-${id}" data-chart="${id}" height="180"></canvas>
             </div>
           </div>
 
-          <!-- RIGHT: bars + values -->
+          <!-- RIGHT: bars + values on a single 3-col grid so headers line up perfectly -->
           <div>
-            <!-- column headers on the same grid as rows so they align perfectly -->
-            <div style="display:grid;grid-template-columns:240px 1fr 60px;gap:10px;align-items:end;margin:0 0 6px 0">
+            <!-- headers -->
+            <div style="
+              display:grid;
+              grid-template-columns:280px 1fr 80px;
+              gap:10px;
+              align-items:end;
+              line-height:1.1;
+              margin:0 0 8px 0">
               <div></div>
-              <div style="text-align:center;font-weight:700;font-size:15px">Percentage of each component</div>
-              <div style="text-align:right;font-weight:700;font-size:15px">Customer’s score</div>
+              <div style="justify-self:center;font-weight:700;font-size:16px;white-space:nowrap">
+                Percentage of each component
+              </div>
+              <div style="justify-self:end;font-weight:700;font-size:16px;white-space:nowrap">
+                Customer’s score
+              </div>
             </div>
 
+            <!-- rows -->
             ${labels.map((k,i)=>`
-              <div style="display:grid;grid-template-columns:240px 1fr 60px;gap:10px;align-items:center;margin:8px 0">
+              <div style="display:grid;grid-template-columns:280px 1fr 80px;gap:10px;align-items:center;margin:8px 0">
                 <div style="color:#475569">
                   ${pretty[k]} <span class="mini" style="color:#64748b">(${Math.round(WEIGHTS[k]*100)}%)</span>
                 </div>
@@ -543,13 +553,13 @@
         },
         options: {
           responsive: true,
-          maintainAspectRatio: false,    // honor our height
+          maintainAspectRatio: false,
           plugins: {
             legend:{ position:"bottom" },
             tooltip:{ enabled:true },
             datalabels:{
               color:"#111",
-              formatter:(v)=> (v && v>0) ? Math.round(v) : null, // hide zeros
+              formatter:(v)=> (v && v>0) ? Math.round(v) : null,
               font:{ weight:"700" }
             }
           },
@@ -559,6 +569,8 @@
       });
       state.charts.set(id, chart);
     }
+
+    
 
 
     async function toggleExpand(id, btn) {
