--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -126,8 +126,8 @@
       <b>All you need to know in one score</b>
     </p>
     <p class="subsub">
-      Scores blend <b>Login Frequency</b>, <b>Feature Adoption</b>, <b>Ticket Volume</b>,
-      <b>Invoice Timeliness</b>, and <b>API Usage Trend</b>. Higher is better.
+      <b>Higher is better</b>
+
     </p>
   </header>
 
